Coach school email update

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <spacer size="30"></spacer>
         <row>
             <columns>
-                <p class="text-center">&copy 2016 ООО «Интеграционика» Все права защищены.<br>ОГРН 1157746150891 ИНН 7734348348</p>
+                <p class="text-center">&copy 2016 ООО «МИНДГУРУ» Все права защищены.<br>ИНН 7708279722  ОГРН 1167746084032</p>
             </columns>
         </row>
         <row>
