--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <spacer size="10"></spacer>
     <row class="collapse">
         <columns large="8" valign="middle">
-            <a href="http://club.dowlatow.ru/"><img class="header-logo small-float-center" src="../assets/img/logo@2x.png" alt="Club logo"></a>
+            {{>header-logo-school}}
         </columns>
 
         <columns large="4" class="show-for-large">
