--- a/src/partials/prewords.html
+++ b/src/partials/prewords.html
@@ -4,7 +4,7 @@
         <columns>
             <h1 class="text-center">Здравствуйте, Денис!</h1>
             <spacer size="10"></spacer>
-            <p class="text-center">Поздравляю! Вы зарегистрировались на сайте <a href="http://club.dowlatow.ru">club.dowlatow.ru</a> и стали участником Клуба – Наблюдателем. Добро пожаловать!</p>
+            <p class="text-center">Поздравляю! Вы выбрали путь, который полностью изменить Вашу жизнь, наполнит ее радостными событиями и любовью. Добро пожаловать!</p>
         </columns>
     </row>
     <spacer size="50"></spacer>
