--- a/src/partials/signature.html
+++ b/src/partials/signature.html
@@ -7,7 +7,7 @@
         <columns large="9">
             <spacer size="16"></spacer>
             <h3 class="small-float-center author-name">Вера</h3>
-            <p class="small-float-center">Администратор Клуба и ваш личный помощник</p>
+            <p class="small-float-center">Ваш личный помощник</p>
         </columns>
     </row>
 </container>
