Coach school email update

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <spacer size="10"></spacer>
     <row class="collapse">
         <columns large="8" valign="middle">
-            {{>header-logo-school}}
+            {{>header-logo-psy}}
         </columns>
 
         <columns large="4" class="show-for-large">
